k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: irene-2tier
  labels:
    environment: dev
